###########
# sources #
###########

uny_test_cpp_sources = files([
  'ChimeraTest.cpp',
  'Mutations.cpp',
  'RandomDNA.cpp',
  'TestAlignment.cpp',
  'TestAmbiguousBases.cpp',
  'TestBandedChainAlign.cpp',
  'TestChemistry.cpp',
  'TestConsensus.cpp',
  'TestCoverage.cpp',
  'TestGenomicConsensus_Experimental.cpp',
  'TestIntegrator.cpp',
  'TestInterval.cpp',
  'TestIntervalMask.cpp',
  'TestLoadModels.cpp',
  'TestMutationEnumerator.cpp',
  'TestMutationTracker.cpp',
  'TestPoaConsensus.cpp',
  'TestPolish.cpp',
  'TestSequence.cpp',
  'TestSparseAlign.cpp',
  'TestSparsePoa.cpp',
  'TestSparseVector.cpp',
  'TestTemplate.cpp',
  'TestUtility.cpp',
  'TestWhitelist.cpp'])
